--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -4,8 +4,7 @@
   surname: "Morresi"
   company: "Google"
   title: "Developer Relations"
-  bio: "I'm a software engineering student by day, and a painter by night. I try to mix art and algorithms in an attempt to get this two parts of me together.
-I like sharing my knowledge, and finding all sorts of ways to get people interested. For this purpose, I taught coding courses to children, organized workshops, and keep up a strong passion in open source software. I also like parrots."
+  bio: "79ers, nature and technology lover, supporter of open-source philosophy and footings along the beach. Maieutic and social oriented, passionate about the art of community building. Best dishes: community, code and Tiramisu’. Desires? A couple of additional hours of sleep every day."
   thumbnailUrl: alfredo-morresi.jpg
   rockstar: true
 -
