--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -1,6 +1,6 @@
 -
   date: "2017-10-06"
-  dateReadable: "6 Ottobre - Mattina"
+  dateReadable: "6 Ottobre"
   timeslots:
     - {
     	startTime: "8:40",
