Add SisInfLab, update schedule.

--- a/_data/organizers.yml
+++ b/_data/organizers.yml
@@ -11,3 +11,4 @@
     - {name: "Alumni Mathematica", description: "Alumni Mathematica", link: "http://alumnimathematica.org/", imageUrl: "alumni.jpg"}
     - {name: "Club degli Sviluppatori", description: "Club degli Sviluppatori", link: "https://www.facebook.com/groups/cdspuglia/", imageUrl: "club.png"}
     - {name: "Studenti Democratici", description: "Studenti Democratici", link: "http://www.studentidemocratici.it/", imageUrl: "sd.jpg"}
+    - {name: "SisInfLab", description: "SisInfLab", link: "http://sisinflab.poliba.it/", imageUrl: "sisinflab.jpg"}
