--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -2,6 +2,11 @@
   group: "Sponsors"
   elements:
     - {name: "Google", description: "Google", link: "https://developers.google.com/", imageUrl: "google.svg"}
+-
+  group: "Partners"
+  elements:
+    - {name: "Nextome", description: "Nextome", link: "https://www.nextome.net/", imageUrl: "nextome.png"}
+    - {name: "Spindox", description: "Spindox", link: "https://www.spindox.it/", imageUrl: "spindox.png"}
 #    - {name: "GDG Bari", description: "GDG Bari", link: "https://www.facebook.com/GDGBari", imageUrl: "gdg-lviv.svg"}
 #-
 #  group: "With support of"
